--- a/style.css
+++ b/style.css
@@ -53,300 +53,401 @@
 }
 
 .b-progress-bar div:nth-child(1){
+	-webkit-transform:rotate(-30deg)translate(-30%,-90%);
 	transform:rotate(-30deg)translate(-30%,-90%);
 }
+
 .b-progress-bar div:nth-child(2){
+	-webkit-transform:rotate(-35deg)translate(-30%,-90%);
 	transform:rotate(-35deg)translate(-30%,-90%);
 }
 .b-progress-bar div:nth-child(3){
+	-webkit-transform:rotate(-30deg)translate(-30%,-80%);
 	transform:rotate(-30deg)translate(-30%,-80%);
 }
 .b-progress-bar div:nth-child(4){
-	transform:rotate(-25deg)translate(-30%, -70%);
+	-webkit-transform:rotate(-25deg)translate(-30%, -70%);
+	transform:rotate(-30deg)translate(-30%,-80%);
 }
 .b-progress-bar div:nth-child(5){
+	-webkit-transform:rotate(-20deg)translate(-30%, -60%);
 	transform:rotate(-20deg)translate(-30%, -60%);
 }
 .b-progress-bar div:nth-child(6){
+	-webkit-transform:rotate(-15deg)translate(-30%, -50%);
 	transform:rotate(-15deg)translate(-30%, -50%);
 }
 .b-progress-bar div:nth-child(7){
+	-webkit-transform:rotate(-10deg)translate(-30%,-40%);
 	transform:rotate(-10deg)translate(-30%,-40%);
 }
 .b-progress-bar div:nth-child(8){
+	-webkit-transform:rotate(-5deg)translate(-30%, -30%);
 	transform:rotate(-5deg)translate(-30%, -30%);
 }
 .b-progress-bar div:nth-child(9){
+	-webkit-transform:rotate(0deg)translate(-29%,-20%);
 	transform:rotate(0deg)translate(-29%,-20%);
 }
 .b-progress-bar div:nth-child(10){
+	-webkit-transform:rotate(5deg)translate(-28%,0%);
 	transform:rotate(5deg)translate(-28%,0%);
 }
 .b-progress-bar div:nth-child(11){
+	-webkit-transform:rotate(10deg)translate(-27%, 0%);
 	transform:rotate(10deg)translate(-27%, 0%);
 }
 .b-progress-bar div:nth-child(12){
+	-webkit-transform:rotate(15deg)translate(-26%,10%);
 	transform:rotate(15deg)translate(-26%,10%);
 }
 .b-progress-bar div:nth-child(13){
+	-webkit-transform:rotate(20deg)translate(-25%,30%);
 	transform:rotate(20deg)translate(-25%,30%);
 }
 .b-progress-bar div:nth-child(14){
+	-webkit-transform:rotate(25deg)translate(-24%,40%);
 	transform:rotate(25deg)translate(-24%,40%);
 }
 .b-progress-bar div:nth-child(15){
+	-webkit-transform:rotate(30deg)translate(-23%,50%);
 	transform:rotate(30deg)translate(-23%,50%);
 }
 .b-progress-bar div:nth-child(16){
+	-webkit-transform:rotate(35deg)translate(-22%,60%);
 	transform:rotate(35deg)translate(-22%,60%);
 }
 .b-progress-bar div:nth-child(17){
+	-webkit-transform:rotate(40deg)translate(-22%,70%);
 	transform:rotate(40deg)translate(-22%,70%);
 }
 .b-progress-bar div:nth-child(18){
+	-webkit-transform:rotate(45deg)translate(-19%,40%);
 	transform:rotate(45deg)translate(-19%,40%);
 }
 .b-progress-bar div:nth-child(19){
+	-webkit-transform:rotate(35deg)translate(-18%,50%);
 	transform:rotate(35deg)translate(-18%,50%);
 }
 .b-progress-bar div:nth-child(20){
+	-webkit-transform:rotate(40deg)translate(-16%,60%);
 	transform:rotate(40deg)translate(-16%,60%);
 }
 .b-progress-bar div:nth-child(21){
+	-webkit-transform:rotate(45deg)translate(-16%,110%);
 	transform:rotate(45deg)translate(-16%,110%);
 }
 .b-progress-bar div:nth-child(22){
+	-webkit-transform:rotate(50deg)translate(-14%,130%);
 	transform:rotate(50deg)translate(-14%,130%);
 }
 .b-progress-bar div:nth-child(23){
+	-webkit-transform:rotate(55deg)translate(-11%,140%);
 	transform:rotate(55deg)translate(-11%,140%);
+
 }
 .b-progress-bar div:nth-child(24){
+	-webkit-transform:rotate(60deg)translate(-9%,100%);
 	transform:rotate(60deg)translate(-9%,100%);
 }
 .b-progress-bar div:nth-child(25){
+	-webkit-transform:rotate(63deg)translate(-5%,111%);
 	transform:rotate(63deg)translate(-5%,111%);
 }
 .b-progress-bar div:nth-child(26){
+	-webkit-transform:rotate(66deg)translate(-5%,115%);
 	transform:rotate(66deg)translate(-5%,115%);
 }
 .b-progress-bar div:nth-child(27){
-	transform:rotate(69deg)translate(-2%,120%);
+	-webkit-transform:rotate(69deg)translate(-2%,120%);
+	transform:rotate(66deg)translate(-5%,115%);
 }
 .b-progress-bar div:nth-child(28){
+	-webkit-transform:rotate(72deg)translate(-2%,115%);
 	transform:rotate(72deg)translate(-2%,115%);
 }
 .b-progress-bar div:nth-child(29){
+	-webkit-transform:rotate(75deg)translate(2%,115%);
 	transform:rotate(75deg)translate(2%,115%);
 }
 .b-progress-bar div:nth-child(30){
+	-webkit-transform:rotate(78deg)translate(2%,115%);
 	transform:rotate(78deg)translate(2%,115%);
 }
 .b-progress-bar div:nth-child(31){
+	-webkit-transform:rotate(81deg)translate(7%,115%);
 	transform:rotate(81deg)translate(7%,115%);
 }
 .b-progress-bar div:nth-child(32){
+	-webkit-transform:rotate(84deg)translate(7%,115%);
 	transform:rotate(84deg)translate(7%,115%);
 }
 .b-progress-bar div:nth-child(33){
+	-webkit-transform:rotate(87deg)translate(14%,115%);
 	transform:rotate(87deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(35){
+	-webkit-transform:rotate(90deg)translate(14%,115%);
 	transform:rotate(90deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(36){
+	-webkit-transform:rotate(93deg)translate(14%,115%);
 	transform:rotate(93deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(37){
+	-webkit-transform:rotate(96deg)translate(14%,115%);
 	transform:rotate(96deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(38){
+	-webkit-transform:rotate(99deg)translate(14%,115%);
 	transform:rotate(99deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(39){
+	-webkit-transform:rotate(102deg)translate(14%,115%);
 	transform:rotate(102deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(40){
+	-webkit-transform:rotate(105deg)translate(14%,115%);
 	transform:rotate(105deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(41){
+	-webkit-transform:rotate(108deg)translate(14%,115%);
 	transform:rotate(108deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(42){
+	-webkit-transform:rotate(111deg)translate(14%,115%);
 	transform:rotate(111deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(43){
+	-webkit-transform:rotate(114deg)translate(14%,115%);
 	transform:rotate(114deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(44){
+	-webkit-transform:rotate(117deg)translate(14%,115%);
 	transform:rotate(117deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(45){
+	-webkit-transform:rotate(120deg)translate(14%,115%);
 	transform:rotate(120deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(46){
+	-webkit-transform:rotate(123deg)translate(14%,115%);
 	transform:rotate(123deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(47){
-	transform:rotate(126deg)translate(14%,115%);
+	-webkit-transform:rotate(126deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(48){
+	-webkit-transform:rotate(129deg)translate(14%,115%);
 	transform:rotate(129deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(49){
+	-webkit-transform:rotate(132deg)translate(14%,115%);
 	transform:rotate(132deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(50){
+	-webkit-transform:rotate(135deg)translate(14%,115%);
 	transform:rotate(135deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(51){
+	-webkit-transform:rotate(138deg)translate(14%,115%);
 	transform:rotate(138deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(52){
+	-webkit-transform:rotate(141deg)translate(14%,115%);
 	transform:rotate(141deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(53){
+	-webkit-transform:rotate(135deg)translate(14%,115%);
 	transform:rotate(135deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(54){
+	-webkit-transform:rotate(138deg)translate(14%,115%);
 	transform:rotate(138deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(55){
+	-webkit-transform:rotate(141deg)translate(14%,115%);
 	transform:rotate(141deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(56){
+	-webkit-transform:rotate(144deg)translate(14%,115%);
 	transform:rotate(144deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(57){
+	-webkit-transform:rotate(147deg)translate(14%,115%);
 	transform:rotate(147deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(58){
+	-webkit-transform:rotate(150deg)translate(14%,115%);
 	transform:rotate(150deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(59){
+	-webkit-transform:rotate(153deg)translate(14%,115%);
 	transform:rotate(153deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(60){
+	-webkit-transform:rotate(156deg)translate(14%,115%);
 	transform:rotate(156deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(61){
+	-webkit-transform:rotate(159deg)translate(14%,115%);
 	transform:rotate(159deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(62){
+	-webkit-transform:rotate(162deg)translate(14%,115%);
 	transform:rotate(162deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(63){
+	-webkit-transform:rotate(165deg)translate(14%,115%);
 	transform:rotate(165deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(64){
+	-webkit-transform:rotate(168deg)translate(14%,115%);
 	transform:rotate(168deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(65){
+	-webkit-transform:rotate(171deg)translate(14%,115%);
 	transform:rotate(171deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(66){
+	-webkit-transform:rotate(174deg)translate(14%,115%);
 	transform:rotate(174deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(67){
+	-webkit-transform:rotate(177deg)translate(14%,115%);
 	transform:rotate(177deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(68){
+	-webkit-transform:rotate(180deg)translate(14%,115%);
 	transform:rotate(180deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(69){
+	-webkit-transform:rotate(183deg)translate(14%,115%);
 	transform:rotate(183deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(70){
+	-webkit-transform:rotate(186deg)translate(14%,115%);
 	transform:rotate(186deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(71){
+	-webkit-transform:rotate(189deg)translate(14%,115%);
 	transform:rotate(189deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(72){
+	-webkit-transform:rotate(191deg)translate(14%,115%);
 	transform:rotate(191deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(73){
+	-webkit-transform:rotate(194deg)translate(14%,115%);
 	transform:rotate(194deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(74){
+	-webkit-transform:rotate(197deg)translate(14%,115%);
 	transform:rotate(197deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(75){
+	-webkit-transform:rotate(200deg)translate(14%,115%);
 	transform:rotate(200deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(76){
+	-webkit-transform:rotate(203deg)translate(14%,115%);
 	transform:rotate(203deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(77){
+	-webkit-transform:rotate(206deg)translate(14%,115%);
 	transform:rotate(206deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(78){
+	-webkit-transform:rotate(209deg)translate(14%,115%);
 	transform:rotate(209deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(79){
+	-webkit-transform:rotate(211deg)translate(14%,115%);
 	transform:rotate(211deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(80){
+	-webkit-transform:rotate(114deg)translate(14%,115%);
 	transform:rotate(114deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(81){
+	-webkit-transform:rotate(117deg)translate(14%,115%);
 	transform:rotate(117deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(82){
+	-webkit-transform:rotate(220deg)translate(14%,115%);
 	transform:rotate(220deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(83){
+	-webkit-transform:rotate(223deg)translate(14%,115%);
 	transform:rotate(223deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(84){
+	-webkit-transform:rotate(226deg)translate(14%,115%);
 	transform:rotate(226deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(85){
+	-webkit-transform:rotate(229deg)translate(14%,115%);
 	transform:rotate(229deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(86){
+	-webkit-transform:rotate(232deg)translate(14%,115%);
 	transform:rotate(232deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(87){
+	-webkit-transform:rotate(235deg)translate(14%,115%);
 	transform:rotate(235deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(88){
+	-webkit-transform:rotate(238deg)translate(14%,115%);
 	transform:rotate(238deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(89){
+	-webkit-transform:rotate(241deg)translate(14%,115%);
 	transform:rotate(241deg)translate(14%,115%);
+
 }
 .b-progress-bar div:nth-child(90){
+	-webkit-transform:rotate(244deg)translate(14%,115%);
 	transform:rotate(244deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(91){
+	-webkit-transform:rotate(247deg)translate(14%,115%);
 	transform:rotate(247deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(92){
+	-webkit-transform:rotate(250deg)translate(14%,115%);
 	transform:rotate(250deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(93){
+	-webkit-transform:rotate(253deg)translate(14%,115%);
 	transform:rotate(253deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(94){
-	transform:rotate(256deg)translate(14%,115%);
+	-webkit-transform:rotate(256deg)translate(14%,115%);
+	transform:rotate(253deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(95){
+	-webkit-transform:rotate(259deg)translate(14%,115%);
 	transform:rotate(259deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(96){
+	-webkit-transform:rotate(262deg)translate(14%,115%);
 	transform:rotate(262deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(97){
+	-webkit-transform:rotate(265deg)translate(14%,115%);
 	transform:rotate(265deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(98){
+	-webkit-transform:rotate(268deg)translate(14%,115%);
 	transform:rotate(268deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(99){
+	-webkit-transform:rotate(271deg)translate(14%,115%);
 	transform:rotate(271deg)translate(14%,115%);
 }
 .b-progress-bar div:nth-child(100){
+	-webkit-transform:rotate(274deg)translate(14%,115%);
 	transform:rotate(274deg)translate(14%,115%);
 }
 .eee{
